# cppClientRabbitMQ

./: .gitignore  CMakeLists.txt  README.md
Docker/: README.md  docker-compose.yml  prometheus.yml
Modules/: CMakeLists.txt
Modules/Broker/: CMakeLists.txt  MessageBrokerBase.cpp  MessageBrokerConsumer.cpp  MessageBrokerProducer.cpp  utils.cpp
Modules/RabbitMQ/: CMakeLists.txt
Modules/Tools/: CMakeLists.txt  ConfigAgent.cpp  JSonUtils.cpp  Logger.cpp  OdbcConnect.cpp  OdbcStatement.cpp
Modules/Web/: CMakeLists.txt
cmake/: FindHIREDIS.cmake  FindQuickFix.cmake  dependencies.cmake  external_project.cmake
include/Broker/: IMessageQueue.hpp  MessageBrokerBase.hpp  MessageBrokerConsumer.hpp  MessageBrokerException.hpp  MessageBrokerInfo.h  MessageBrokerProducer.hpp  MessagePublishProperties.h  MessageWrapper.hpp  QueueProperties.h  utils.h
include/Tools/: ConfigAgent.h  JSonUtils.h  Logger.h  MapExpires.h  MarkValue.h  OdbcConnect.h  OdbcStatement.h
src/: CMakeLists.txt
src/RPC/: CMakeLists.txt  Main.cpp
src/rpc_client/: CMakeLists.txt  Main.cpp
src/rpc_server/: CMakeLists.txt  Main.cpp
unitTest/: CMakeLists.txt  MessageBrokerInfoTest.cpp  MessageBrokerTest.cpp
